--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,22 +8,8 @@ layout: default
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
       {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
-
-      {% assign post = page %}
-  		{% if post.tags.size > 0 %}
-
-  		{% assign tags_content = "" %}
-  		{% for post_tag in post.tags %}
-  			{% capture tags_content_temp %}
-  				{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>
-  			{% endcapture %}
-  			{% assign tags_content = tags_content_temp %}
-  		{% endfor %}
-
-  		&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
-
+      {% assign post = page %}{% if post.tags.size > 0 %}{% assign tags_content = "" %}{% for post_tag in post.tags %}{% capture tags_content_temp %}{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>{% endcapture %}{% assign tags_content = tags_content_temp %}{% endfor %}&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
   	  {% endif %}
-
     </p>
   </header>
   {% assign expires = page.date | date: "%s" | plus: 77760000 | date: "%s" %}
