--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,22 @@ layout: default
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
-      {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
-      {% assign post = page %}{% if post.tags.size > 0 %}{% assign tags_content = "" %}{% for post_tag in post.tags %}{% capture tags_content_temp %}{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>{% endcapture %}{% assign tags_content = tags_content_temp %}{% endfor %} &middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
+  	  {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
+      {% assign post = page %}
+  		{% if post.tags.size > 0 %}
+
+  		{% assign tags_content = "" %}
+  		{% for post_tag in post.tags %}
+  			{% capture tags_content_temp %}
+  				{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>
+  			{% endcapture %}
+  			{% assign tags_content = tags_content_temp %}
+  		{% endfor %}
+
+  		&middot;	<span class="tags" itemprop="tags">{{ tags_content }}</span>
+
   	  {% endif %}
+      {% endif %}
     </p>
   </header>
   {% assign expires = page.date | date: "%s" | plus: 77760000 | date: "%s" %}
