--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   		{% assign tags_content = "" %}
   		{% for post_tag in post.tags %}
   			{% capture tags_content_temp %}
-  				{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/tagged#{{ post_tag | slugify }}">#{{ post_tag }}</a>
+  				{{ tags_content }}<a href="{{ site.url }}{{ site.baseurl }}/etiket#{{ post_tag | slugify }}">#{{ post_tag }}</a>
   			{% endcapture %}
   			{% assign tags_content = tags_content_temp %}
   		{% endfor %}
