--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <p class="site-nav">
-  <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">Kim</a> / 
-  <a href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">İletişim</a>
+  <a href="{{ '/kim' | prepend: site.baseurl | prepend: site.url }}">Kim</a> / 
+  <a href="{{ '/iletisim' | prepend: site.baseurl | prepend: site.url }}">İletişim</a>
 </p>
