--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -195,6 +195,12 @@ hr {
     border-right: 0;
     text-align: center
 }
+::-webkit-scrollbar {
+  width  : 10px;
+  height : 9px;
+}
+::-webkit-scrollbar-track { background: rgb(177, 177, 177); }
+::-webkit-scrollbar-thumb { background: rgb(136, 136, 136); }
 /**
  * Clearfix
  */
