--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -41,8 +41,8 @@
     p {
       font-size: $small-font-size;
     }
-    .site-intro {
-        font-size: $big-font-size;
+    #site-intro {
+        font-size: 1.1rem;
     }
 }
 
