--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -135,6 +135,7 @@ code {
 }
 
 pre {
+    font-size: 12px;
     padding: 8px 12px;
     overflow-x: auto;
     border: 1px solid $grey-color-light;
