--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %d, %Y" }}</time>
   	  {% if page.author %} &middot; <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
       {% assign post = page %}
-  		{% if post.tags.size > 0 %}
+  		{% if post.categories.size > 0 %}
 
   		{% assign tags_content = "" %}
   		{% for post_tag in post.categories %}
