--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -51,7 +51,7 @@
 }
 .home .site-header {
     border-bottom: 1px solid $grey-color-light;
-    margin-top: -2rem;
+    /*margin-top: -2rem;*/
     max-width: $max-width;
     position: inherit;
 }
@@ -79,7 +79,8 @@
  */
 .page-content {
     position: relative;
-    padding: $spacing-unit ($spacing-unit * 0.75);
+    /*padding: $spacing-unit ($spacing-unit * 0.75); */
+    padding: 0rem 1.5rem;
     margin: 1rem;
     box-sizing: border-box;
     max-width: $max-width;
