--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -155,7 +155,13 @@
         font-size: 1rem;
     }
 }
-
+.footnotes {
+    font-size: .8em;
+    border-top: 1px solid #efefef;
+}
+.footnotes p {
+    margin-top:15px;
+}
 .copyright {
   margin-top: $spacing-unit;
   font-size: $small-font-size;
