--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,3 @@
 <p class="site-nav">
-  <a href="{{ '/fikir' | prepend: site.baseurl | prepend: site.url }}">Fikir</a> /
-  <a href="{{ '/kim' | prepend: site.baseurl | prepend: site.url }}">Kim</a>
+  <a href="{{ '/fikir' | prepend: site.baseurl | prepend: site.url }}">Fikir</a>
 </p>
